chore: break things by using import/export

--- a/package.json
+++ b/package.json
@@ -23,5 +23,6 @@
   "scripts": {
     "serve": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
-  }
+  },
+  "type": "module"
 }
